[gd_scene load_steps=14 format=3 uid="uid://c2tnfjyw1ubyn"]

[ext_resource type="Texture2D" uid="uid://kfhc8txcf7m2" path="res://backgrounds/ct_room_001.jpg" id="1_06t4h"]
[ext_resource type="Script" uid="uid://dk1hmjqgdcf3x" path="res://scripts/MainMenu/main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://dkv204q8caigc" path="res://fonts/07-TH-Sarabun-PSK/THSarabun Bold.ttf" id="2_7vrkn"]
[ext_resource type="AudioStream" uid="uid://bggo2ocguam3u" path="res://audio/Pufino - Enjoy (freetouse.com).mp3" id="4_jix8l"]
[ext_resource type="Script" uid="uid://cs4mx4fgo2vkp" path="res://scripts/MainMenu/setttings.gd" id="5_glbon"]
[ext_resource type="Texture2D" uid="uid://bt5pd4sni3o6o" path="res://icon/correct_3-1.png" id="6_8qtwp"]
[ext_resource type="Script" uid="uid://bdbt6lbph7v3y" path="res://scripts/MainMenu/exit.gd" id="6_nlkkf"]
[ext_resource type="Texture2D" uid="uid://duhx01la7ogoh" path="res://icon/correct_3-2.png" id="7_dy7ct"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.92535293, 0.9253528, 0.9253529, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.65012825, 0.6501283, 0.65012825, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -70.0
offset_right = 170.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="btn_2_choose_target" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "โหมดฝึก"

[node name="btn_3_test" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "โหมดทดสอบ"

[node name="btn_setting" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Setting"

[node name="btn_exit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -325.0
offset_right = 234.0
offset_bottom = -211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/paragraph_spacing = 10
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 75
text = "CT Cimumlation VR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jix8l")
autoplay = true
bus = &"Music"

[node name="SetttingsMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.0
offset_top = -200.5
offset_right = 293.0
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_glbon")

[node name="Label" type="Label" parent="SetttingsMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.5
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 60
text = "Setting"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_back" type="Button" parent="SetttingsMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.5
offset_top = -69.5
offset_right = 60.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Back"

[node name="btn_mute" type="CheckBox" parent="SetttingsMenu"]
layout_mode = 1
offset_left = 139.0
offset_top = 98.5
offset_right = 385.0
offset_bottom = 179.5
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_icons/checked = ExtResource("6_8qtwp")
theme_override_icons/unchecked = ExtResource("7_dy7ct")
text = "Mute"
alignment = 1

[node name="ExitMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.0
offset_top = -200.5
offset_right = 293.0
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_nlkkf")

[node name="Label" type="Label" parent="ExitMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.5
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 60
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_no" type="Button" parent="ExitMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -28.25
offset_right = 221.0
offset_bottom = 28.25
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "No"

[node name="btn_yes" type="Button" parent="ExitMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -28.25
offset_right = -100.0
offset_bottom = 28.25
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Yes"

[connection signal="pressed" from="MainButtons/btn_2_choose_target" to="." method="_on_go_2_choose_target_pressed"]
[connection signal="pressed" from="MainButtons/btn_setting" to="." method="_on_go_settings_pressed"]
[connection signal="pressed" from="MainButtons/btn_exit" to="." method="_on_go_exit_pressed"]
[connection signal="pressed" from="SetttingsMenu/btn_back" to="." method="_on_back_settings_pressed"]
[connection signal="toggled" from="SetttingsMenu/btn_mute" to="SetttingsMenu" method="_on_btn_mute_toggled"]
[connection signal="pressed" from="ExitMenu/btn_no" to="." method="_on_back_exit_pressed"]
[connection signal="pressed" from="ExitMenu/btn_yes" to="ExitMenu" method="_on_exit_pressed"]
